--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1068,4 +1068,6 @@
     <string name="contacts_send_group_message">Send group message</string>
     <string name="inbox_this_folder_is_empty">This folder is empty</string>
     <string name="inbox_nothing_to_see_here">Nothing to see here</string>
+    <string name="inbox_could_not_retrieve_messages">Couldn\'t retrieve your messages</string>
+    <string name="inbox_pull_down_to_retry">Please pull down to retry</string>
 </resources>
