Display in message actions below each message when showing a conversation
- In message actions always appears at the bottom of a message body
- In message actions shows a "show history" button when the message has
  a "quoted" part being hidden
- Once history was displayed, it's not possible to hide it again

MAILAND-1533

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1072,4 +1072,6 @@
     <string name="inbox_pull_down_to_retry">Please pull down to retry</string>
     <string name="edit_draft">Edit draft</string>
     <string name="primary_user_error">Could not upgrade, something went wrong.</string>
+
+    <string name="details_show_history">Show history</string>
 </resources>
