--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1071,5 +1071,5 @@
     <string name="inbox_could_not_retrieve_messages">Couldn\'t retrieve your messages</string>
     <string name="inbox_pull_down_to_retry">Please pull down to retry</string>
     <string name="edit_draft">Edit draft</string>
-    <string name="primary_user_error">Error with primary user (not found).</string>
+    <string name="primary_user_error">Could not upgrade, something went wrong.</string>
 </resources>
