Translations: values-de: Fix translation for empty_message
The current German translation describes an action, emptying a message.
But the string is used to desctibe an message without content.
So the right German phrase is "Nachricht ohne Inhalt".

Signed-off-by: Richard Weinberger <richard@nod.at>

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -293,7 +293,7 @@ Verlieren Sie dieses Passwort nicht, wir können es nicht wiederherstellen. Wenn
     <string name="draft_label_message_uploading">Nachricht wird gesendet …</string>
     <string name="attachment_failed">Hochladen des Anhangs der Nachricht fehlgeschlagen </string>
     <string name="attaching_photo_failed">Anhängen der Fotos fehlgeschlagen</string>
-    <string name="empty_message">Nachricht leeren</string>
+    <string name="empty_message">Nachricht ohne Inhalt</string>
     <string name="dismiss">Verwerfen</string>
     <string name="new_message_arrived">Neue Nachricht!</string>
     <string name="please_choose_color">Bitte eine Farbe wählen</string>
