Show a dialog that the limit is reached when trying to select more than 100 labels
We can only pass a limited amount of labels to UpdateConversationsLabelsWorker, so we also need to limit the selection of labels in the LabelsActionSheet. We show a dialog instead of a toast in order to make sure the user sees the message.

MAILAND-2311

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1079,4 +1079,6 @@
     <string name="could_not_complete_action">Could not complete the action</string>
 
     <string name="decryption_of_message_failed">Decryption error: decryption of this message\'s encrypted content failed.</string>
+
+    <string name="labels_selected_limit_reached">Limit reached</string>
 </resources>
