--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -829,7 +829,9 @@
     <string name="payment_method">Payment Method</string>
 
     <string name="password_manager">Password management</string>
+    <string name="password_changed">Password changed.</string>
     <string name="recovery_email">Recovery email</string>
+    <string name="recovery_email_changed">Recovery email changed.</string>
     <string name="info_for_missing_functionality">Please log in through <a href="https://www.protonmail.com/">protonmail.com</a> and access your settings to edit this information.</string>
     <string name="storage">Mailbox size</string>
     <string name="storage_used">%1$s / %2$s</string>
@@ -1080,4 +1082,5 @@
     <string name="decryption_of_message_failed">Decryption error: decryption of this message\'s encrypted content failed.</string>
 
     <string name="labels_selected_limit_reached">Limit reached</string>
+
 </resources>
