Improve internal encryption level explanatiory message
MAILAND-1891

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -677,7 +677,7 @@
     <string name="sender_lock_pgp_encrypted">PGP-encrypted message</string>
     <string name="sender_lock_pgp_encrypted_verified">PGP-encrypted message from verified address</string>
     <string name="sender_lock_pgp_signed_verified_sender">PGP-signed message from verified address</string> <!-- External PGP signed-only message that was encrypted by the BE -->
-    <string name="sender_lock_internal">End-to-end encrypted message</string>
+    <string name="sender_lock_internal">End-to-end encrypted and signed message</string>
     <string name="sender_lock_internal_verified">End-to-end encrypted message from verified address</string>
     <string name="sender_lock_unknown_scheme" translatable="false">Unknown encryption scheme</string>
     <!-- Composer locks -->
