Re-enable setting color for recipient encryption icon
This code was "removed" by commit `41ae6a607a3` following a product's
request, but it should instead be kept in place for consistency till some more
comprehensive decisions on this icon's designs will be taken.

- Change `composer_lock_pgp_encrypted_pinned` string to include details
  on the recipient being verified

MAILAND-1891

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -683,7 +683,7 @@
     <!-- Composer locks -->
     <string name="composer_lock_internal">End-to-end encrypted</string>
     <string name="composer_lock_internal_pinned">End-to-end encrypted to verified address</string>
-    <string name="composer_lock_pgp_encrypted_pinned">PGP-encrypted</string>
+    <string name="composer_lock_pgp_encrypted_pinned">PGP-encrypted to verified recipient</string>
     <string name="composer_lock_pgp_signed">PGP-signed</string>
     <string name="composer_lock_no_scheme" translatable="false"></string>
     <string name="composer_lock_unknown_scheme" translatable="false">Unknown encryption scheme</string>
