Fix code style in drawer_section_name_item.xml
* Replaced hard-coded values
* Correctly named views' identifiers following agreed standards

MAILAND-1746

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="drawer_settings">Settings</string>
     <string name="drawer_subscription">Subscription</string>
     <string name="drawer_sign_out">Sign out</string>
+    <string name="drawer_create_icon_description">Create new item</string>
     <!-- endregion -->
 
     <!-- region Composer -->
