--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,8 +38,8 @@
     <string name="drawer_settings">Settings</string>
     <string name="drawer_subscription">Subscription</string>
     <string name="drawer_sign_out">Sign out</string>
-    <string name="drawer_create_folder">Create folder</string>
-    <string name="drawer_create_label">Create label</string>
+    <string name="drawer_add_folder">Add folder</string>
+    <string name="drawer_add_label">Add label</string>
     <string name="drawer_create_icon_description">Create new item</string>
     <!-- endregion -->
 
