Create item_parent_picker_folder.xml for ParentFolderPickerActivity
MAILAND-2613

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,8 @@
     <!-- region Parent Folder Picker -->
     <string name="parent_picker_title">Parent folder</string>
     <string name="parent_picker_header">If you do not select a parent folder, this new folder will be created as a top level folder.</string>
+    <string name="parent_picker_folder_icon_description">Folder icon</string>
+    <string name="parent_picker_parent_folder_icon_description">Folder with children icon</string>
     <!-- endregion -->
 
     <!-- region Dialogs -->
