Add parent folder layout in activity_labels_manager.xml
MAILAND-2298

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="x_labels">Labels</string>
     <string name="x_more">More</string>
     <string name="x_none">None</string>
+    <string name="x_parent_folder">Parent folder</string>
     <string name="x_search">Search</string>
     <string name="x_set">Set</string>
     <string name="x_0">0</string>
