Fix ContactGroupDetailsActivity.kt FAB
Moved into Toolbar as V4 design

MAILAND-2602

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="x_add_label">Add label</string>
     <string name="x_days">Days</string>
     <string name="x_done">Done</string>
+    <string name="x_edit">Edit</string>
     <string name="x_folders">Folders</string>
     <string name="x_hours">Hours</string>
     <string name="x_labels">Labels</string>
